--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -73,7 +73,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="Login1"
+        android:text="Login"
         android:textColor="@color/black"
         android:background="@color/white"
         android:paddingVertical="12dp"
